src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-5.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units order=vda\")"
---
items:
  - loc: "#units order=vda"
    locs:
      directive: "#units"
    options:
      - loc: order=vda
        locs:
          option: order
          order: vda
        option: CompassAndTapeOrder
        order:
          - Inclination
          - Distance
          - Azimuth
    type: UnitsDirective
