src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-50.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units a=m\")"
---
items:
  - loc: "#units a=m"
    locs:
      directive: "#units"
    options:
      - loc: a=m
        locs:
          option: a
          unit: m
        option: FrontsightAzimuthUnit
        unit: Mils
    type: UnitsDirective
