src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-53.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units ab\")"
---
INVALID:
  items:
    - INVALID:
        loc: "#units ab"
        locs:
          directive: "#units"
        options:
          - INVALID:
              locs:
                option: ab
              option: BacksightAzimuthUnit
            issues:
              - 0
        type: UnitsDirective
issues:
  - code: EMISSINGVALUE
    loc: ""
    message: Missing =
    severity: Error
