src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-55.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units ab=d\")"
---
items:
  - loc: "#units ab=d"
    locs:
      directive: "#units"
    options:
      - loc: ab=d
        locs:
          option: ab
          unit: d
        option: BacksightAzimuthUnit
        unit: Degrees
    type: UnitsDirective
