src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-56.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units ab=degrees\")"
---
items:
  - loc: "#units ab=degrees"
    locs:
      directive: "#units"
    options:
      - loc: ab=degrees
        locs:
          option: ab
          unit: degrees
        option: BacksightAzimuthUnit
        unit: Degrees
    type: UnitsDirective
