src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-58.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units ab=grads\")"
---
items:
  - loc: "#units ab=grads"
    locs:
      directive: "#units"
    options:
      - loc: ab=grads
        locs:
          option: ab
          unit: grads
        option: BacksightAzimuthUnit
        unit: Grads
    type: UnitsDirective
