src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-59.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units ab=m\")"
---
items:
  - loc: "#units ab=m"
    locs:
      directive: "#units"
    options:
      - loc: ab=m
        locs:
          option: ab
          unit: m
        option: BacksightAzimuthUnit
        unit: Mils
    type: UnitsDirective
