src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-6.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units order=vad\")"
---
items:
  - loc: "#units order=vad"
    locs:
      directive: "#units"
    options:
      - loc: order=vad
        locs:
          option: order
          order: vad
        option: CompassAndTapeOrder
        order:
          - Inclination
          - Azimuth
          - Distance
    type: UnitsDirective
